workflow added description parameter

--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -2,6 +2,10 @@ name: README_RSS_FEED_CI
 
 on:
   workflow_dispatch:
+    inputs:
+      description:
+        description: 'What updated on my blog'
+        required: false
   schedule:
     - cron: '0 */2 * * *'
 
