--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -34,6 +34,7 @@ jobs:
         run: |
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+          git pull origin master
           git add .
           git commit -m "docs: update feed" || true
           git push
