--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -6,8 +6,6 @@ on:
       description:
         description: 'What updated on my blog'
         required: false
-  schedule:
-    - cron: '0 */2 * * *'
 
 jobs:
   readme:
@@ -30,15 +28,7 @@ jobs:
           file: 'README.md'
           start_flag: "<!-- blog start -->"
           end_flag: "<!-- blog end -->"
-      - name: asciinema
-        uses: sarisia/actions-readme-feed@v1.2.0
-        id: asciinema_feed
-        with:
-          url: 'https://rss.app/feeds/STFvRCRUhbCJcuUp.xml'
-          file: 'README.md'
-          start_flag: "<!-- asciinema start -->"
-          end_flag: "<!-- asciinema end -->"
-      - if: ${{ steps.qiita_feed.outputs.changed == true || steps.blog_feed.outputs.changed == true || steps.asciinema_feed.outputs.changed == true}}
+      - if: ${{ steps.qiita_feed.outputs.changed == true || steps.blog_feed.outputs.changed == true }}
         run: |
           git config --global user.name "${{ github.actor }}"
           git config --global user.email "${{ github.actor }}@users.noreply.github.com"
